# cpps_product_client

./: .gitignore  Dockerfile  cpps_product_client.pro  database_function.cpp  database_function.h  globalVariable.h  main.cpp  open62541.c  sources.list  ua_function.cpp  ua_function.h
cpps_product_client/: CMakeLists.txt  cpps_product_client.pro  database_function.cpp  database_function.h  globalVariable.h  main.cpp  open62541.h  ua_function.cpp  ua_function.h
